[gd_scene load_steps=2 format=3 uid="uid://ad_watch_ui"]

[ext_resource type="Script" path="res://scripts/v4/AdWatchUIV4.gd" id="1"]

[node name="AdWatchUI" type="CanvasLayer"]
visible = false

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.8)

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.3
anchor_top = 0.3
anchor_right = 0.7
anchor_bottom = 0.7

[node name="VBox" type="VBoxContainer" parent="Panel"]
offset_left = 10.0
offset_top = 10.0
offset_right = 270.0
offset_bottom = 230.0

[node name="Title" type="Label" parent="Panel/VBox"]
text = "üéÅ FREE REWARD!"
horizontal_alignment = 1

[node name="RewardIcon" type="Label" parent="Panel/VBox"]
text = "‚ù§Ô∏è"
horizontal_alignment = 1

[node name="RewardName" type="Label" parent="Panel/VBox"]
text = "Extra Life"
horizontal_alignment = 1

[node name="Description" type="Label" parent="Panel/VBox"]
text = "Watch a short video to get 1 extra ball!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Countdown" type="Label" parent="Panel/VBox"]
text = "Loading ad..."
horizontal_alignment = 1

[node name="WatchButton" type="Button" parent="Panel/VBox"]
text = "‚ñ∂Ô∏è Watch Ad"

[node name="CloseButton" type="Button" parent="Panel/VBox"]
text = "‚úñ Maybe Later"

[node name="Timer" type="Label" parent="."]
visible = false
